# xopera-opera

./: .dockerignore  .editorconfig  .gitignore  .sanity-config.ini  Dockerfile  Makefile  Pipfile  README.md  README.rst  dev.sh  pylintrc  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: ci_cd.yaml  nightly.yaml
docs/: business-value.rst  conf.py  documentation.rst  examples.rst  index.rst  installation.rst  introduction.rst  opera_api.rst  opera_cli.rst  quickstart.rst  saas.rst  template_library.rst
docs/files/csars/big/: big.csar
docs/files/csars/small/: inputs.json  small.csar
examples/: README.md  os_vm.yaml  runme.sh  service.yaml
examples/artifacts/: service.yaml
examples/artifacts/files/: file.json  file.txt
examples/artifacts/playbooks/: create.yaml
examples/attribute_mapping/: service.yaml
examples/attribute_mapping/playbooks/: create-student.yaml  teacher-teaches-student--preconfigure-source.yaml
examples/capability_attributes_properties/: service.yaml
examples/capability_attributes_properties/playbooks/: create.yaml
examples/hello/: service.yaml
examples/hello/playbooks/: create.yaml  delete.yaml
examples/intrinsic_functions/: service.yaml
examples/library-test/service-template/: service.yaml
examples/nginx_openstack/: service.yaml
examples/outputs/: service.yaml
examples/outputs/playbooks/: create.yaml
examples/playbooks/nginx/: uninstall.yml
examples/playbooks/vm/: create.yml  delete.yml
examples/policy_triggers/: service.yaml
examples/policy_triggers/playbooks/: auto_scale.yaml  create.yaml  retrieve_info.yaml  scale_down.yaml  scale_up.yaml
examples/relationship_outputs/: service.yaml
examples/relationship_outputs/playbooks/: create.yaml  post_configure_source.yaml  post_configure_target.yaml  pre_configure_source.yaml  pre_configure_target.yaml
examples/tosca_functions/: service.yaml
examples/tosca_functions/playbooks/: create.yaml  post_configure_target.yaml
opera/: ansible.py  cli.py  cmd.py  csar.py  instances.py  operations.py  types.py  types.yaml
opera/commands/: __init__.py  deploy.py  undeploy.py
src/opera/: ansible.py  bundle.py  cli.py  constants.py  csar.py  error.py  instances.py  log.py  operations.py  stdlib.py  storage.py  types.yaml  utils.py  value.py
src/opera/commands/: __init__.py  deploy.py  diff.py  info.py  init.py  notify.py  outputs.py  package.py  undeploy.py  unpackage.py  update.py  validate.py
src/opera/compare/: comparisons.py  diff.py  instance_comparer.py  template_comparer.py
src/opera/executor/: ansible.py  utils.py
src/opera/executors/ansible/: ansible.py  utils.py
src/opera/executors/ansible/stdout_callbacks/: json_ansible_callback.py
src/opera/instance/: base.py  node.py  relationship.py  topology.py
src/opera/parser/: parser.py
src/opera/parser/tosca/: __init__.py  base.py  bool.py  comparable.py  csar.py  entity.py  integer.py  list.py  map.py  parser.py  path.py  reference.py  stdlib.py  string.py  timestamp.py  type.py  version.py  void.py
src/opera/parser/tosca/v_1_3/: __init__.py  activity_definition.py  artifact_definition.py  artifact_type.py  range.py  (+43 more)
src/opera/parser/utils/: location.py
src/opera/parser/yaml/: __init__.py  constructor.py  loader.py  node.py  resolver.py
src/opera/stdlib/: __init__.py  v_1_3.yaml
src/opera/template/: capability.py  interface.py  node.py  operation.py  policy.py  relationship.py  requirement.py  topology.py  trigger.py
src/opera/threading/: __init__.py  node_executor.py  utils.py
tests/integration/cli_commands/: inputs.json  inputs.yaml  runme.sh  service.yaml
tests/integration/cli_commands/playbooks/: create.yaml  delete.yaml  start.yaml
tests/integration/compare/: inputs1.yaml  inputs2.yaml  runme.sh  template1.yaml  template2.yaml  types.yaml
tests/integration/compare/playbooks/: create.yaml
tests/integration/concurrency/: runme.sh  service.yaml
tests/integration/concurrency/playbooks/: sleep.yaml
tests/integration/hello_world_tosca_2_0/: runme.sh  service.yaml
tests/integration/hello_world_tosca_2_0/playbooks/: create.yaml
tests/integration/interruption/: runme.sh  service.yaml
tests/integration/interruption/playbooks/: delete.yaml
tests/integration/misc-tosca-types/: runme.sh  service-template.yaml
tests/integration/misc_tosca_types/: inputs.yaml  runme.sh  service-template.yaml  service.yaml
tests/integration/notify/: runme.sh  service.yaml
tests/integration/notify/files/: notification_scale_down.json  notification_scale_up.json
tests/integration/notify/playbooks/: configure.yaml  create.yaml  delete.yaml  scale_down.yaml  scale_up.yaml
tests/opera/: conftest.py  test_bundle.py  test_csar.py
tests/opera/parser/: test_parser.py  test_tosca.py
tests/opera/parser/tosca/: conftest.py  test_base.py  test_bool.py  test_entity.py  test_integer.py  test_list.py  test_map.py  test_path.py  test_reference.py  test_string.py  test_type.py  test_version.py  test_void.py
tests/opera/parser/utils/: test_location.py
tests/opera/parser/yaml/: test_constructor.py  test_loader.py  test_node.py  test_parser.py  test_resolver.py
tests/resources/csar/absolutepath/: absolutepath.yaml
tests/resources/csar/barebones/: barebones.yaml
tests/resources/csar/invalidkey/: invalidkey.yaml
tests/resources/csar/mini/: mini.yaml
tests/resources/csar/missingmetadata/: missingmetadata.yaml
tests/resources/csar/multipleroot/: firstroot.yaml  secondroot.yaml
tests/unit/opera/: conftest.py
tests/unit/opera/commands/: conftest.py  test_argparse.py  test_deploy.py  test_diff.py  test_info.py  test_init.py  test_notify.py  test_outputs.py  test_package.py  test_undeploy.py  test_unpackage.py  test_update.py  test_validate.py
tests/unit/opera/compare/: conftest.py  test_instance_compare.py  test_template_compare.py  test_workdir.py
tests/unit/opera/instance/: test_attribute_mapping.py  test_eval_function.py  test_node_policies.py
tests/unit/opera/parser/: test_tosca.py
tmp/: mini.yaml  real.yaml  wip.yaml  x.deploy  x.yaml
(+112 files in other folders)
