[metadata]
name = opera
url = https://github.com/xlab-si/xopera-opera
project_urls =
    Source Code = https://github.com/xlab-si/xopera-opera
    Bug Tracker = https://github.com/xlab-si/xopera-opera/issues
    Documentation = https://xlab-si.github.io/xopera-docs/
author = XLAB d.o.o.
author_email = pypi@xlab.si
license_file = LICENSE
description = Lightweight TOSCA orchestrator
long_description = file: README.md
long_description_content_type = text/markdown
keywords = orchestration
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Framework :: Ansible

[options]
package_dir =
  = src
packages = find_namespace:
zip_safe = True
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  ansible >= 2.8
  pyyaml >= 3.10
  shtab >= 1.3.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  opera = opera.cli:main

[options.extras_require]
openstack =
    openstacksdk
