[metadata]
name = opera
url = https://github.com/xlab-si/xopera-opera
project_urls =
    Documentation = https://xlab-si.github.io/xopera-docs/
    Source Code = https://github.com/xlab-si/xopera-opera
    Bug Tracker = https://github.com/xlab-si/xopera-opera/issues
    Discussions = https://github.com/xlab-si/xopera-opera/discussions
    Releases = https://github.com/xlab-si/xopera-opera/releases
    Pre-releases = https://test.pypi.org/project/opera/#history
    Examples = https://github.com/xlab-si/xopera-examples
    CI = https://app.circleci.com/pipelines/github/xlab-si/xopera-opera
    Coverage = https://codeclimate.com/github/xlab-si/xopera-opera
author = XLAB d.o.o.
author_email = pypi@xlab.si
maintainer = xOpera team
maintainer_email = xopera@xlab.si
license_file = LICENSE
description = Lightweight TOSCA orchestrator
long_description = file: README.md
long_description_content_type = text/markdown
keywords = orchestration
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Framework :: Ansible

[options]
package_dir =
  = src
packages = find_namespace:
zip_safe = True
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  ansible >= 4.7.0
  pyyaml <= 5.4.1
  shtab >= 1.4.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  opera = opera.cli:main

[options.extras_require]
openstack =
    openstacksdk
