[metadata]
name = opera
url = https://github.com/xlab-si/xopera-opera
project_urls =
    Documentation = https://xlab-si.github.io/xopera-docs/
    Source Code = https://github.com/xlab-si/xopera-opera
    Bug Tracker = https://github.com/xlab-si/xopera-opera/issues
    Discussions = https://github.com/xlab-si/xopera-opera/discussions
    Releases = https://github.com/xlab-si/xopera-opera/releases
    Pre-releases = https://test.pypi.org/project/opera/#history
    Examples = https://github.com/xlab-si/xopera-examples
    CI = https://github.com/xlab-si/xopera-opera/actions
    Coverage = https://codeclimate.com/github/xlab-si/xopera-opera
author = XLAB d.o.o.
author_email = pypi@xlab.si
maintainer = xOpera team
maintainer_email = xopera@xlab.si
license_file = LICENSE
description = Lightweight TOSCA orchestrator
long_description = file: README.md
long_description_content_type = text/markdown
keywords = orchestration
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Framework :: Ansible

[options]
package_dir =
  = src
packages = find_namespace:
zip_safe = True
include_package_data = True
setup_requires =
  setuptools_scm >= 6.4.2
install_requires =
  ansible-core >= 2.13.4
  pyyaml <= 5.4.1
  shtab >= 1.5.5
  opera-tosca-parser >= 0.2.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  opera = opera.cli:main

[options.extras_require]
ansible =
    ansible >= 5.9.0
openstack =
    openstacksdk >= 0.99.0
tests =
    wheel == 0.38.1
    bandit == 1.7.4
    docutils == 0.18.1
    flake8 == 4.0.1
    flake8-import-order == 0.18.1
    mypy == 0.812
    pydocstyle == 6.1.1
    pylint == 2.13.4
    pytest == 7.1.3
    pytest-cov == 3.0.0
    selinux == 0.2.1
